--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Web Profile</title>
+    <style>
+        body { text-align: center; font-family: Arial, sans-serif; background-color: #f4f4f4; }
+        h1 { color: #333; }
+    </style>
+</head>
+<body>
+    <h1>Welcome to My GitHub Profile! 👋</h1>
+    <p>Hello! I'm [Your Name], a passionate developer.</p>
+</body>
+</html>
 
