--- a/index.html
+++ b/index.html
@@ -3,15 +3,84 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Web Profile</title>
+    <title>Maddirala Sreenija Swetha - Portfolio</title>
     <style>
-        body { text-align: center; font-family: Arial, sans-serif; background-color: #f4f4f4; }
-        h1 { color: #333; }
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background: linear-gradient(to right, #141e30, #243b55);
+            color: white;
+            text-align: center;
+        }
+        .container {
+            width: 80%;
+            margin: auto;
+            padding: 20px;
+        }
+        h1 {
+            font-size: 2.5em;
+            margin-bottom: 10px;
+        }
+        .section {
+            background: rgba(255, 255, 255, 0.1);
+            padding: 20px;
+            margin: 20px 0;
+            border-radius: 10px;
+        }
+        ul {
+            list-style-type: none;
+            padding: 0;
+        }
+        ul li {
+            padding: 5px 0;
+        }
     </style>
 </head>
 <body>
-    <h1>Welcome to My GitHub Profile! 👋</h1>
-    <p>Hello! I'm [Your Name], a passionate developer.</p>
+    <div class="container">
+        <h1>Maddirala Sreenija Swetha</h1>
+        <p>As a third-year CSE student, I have developed a strong foundation in C, Python, Java, and SQL, with proficiency in data structures. I am currently interning in the fields of Artificial Intelligence and Machine Learning, where I am applying my knowledge in real-world projects. To further enhance my coding skills, I actively engage in platforms like HackerRank, where I solve problems across various domains such as algorithms, data structures, and artificial intelligence. This helps me improve my problem-solving abilities, optimize my coding techniques, and stay updated with industry standards. Additionally, I am focused on gaining proficiency in full-stack development to expand my skill set and deepen my understanding of computer science.</p>
+
+        <div class="section">
+            <h2>Education</h2>
+            <ul>
+                <li><strong>GITAM Deemed University</strong> - BTech, Computer Science (2022-2026) - CGPA: 8.59</li>
+                <li><strong>Resonance Eduventures Limited</strong> - CBSE (12th) (2020-2022) - 84.6%</li>
+                <li><strong>Sri Sathya Sai Vidya Vihar</strong> - CBSE (10th) (2013-2020) - 90.2%</li>
+            </ul>
+        </div>
+
+        <div class="section">
+            <h2>Technical Skills</h2>
+            <ul>
+                <li>C, Python, Java</li>
+                <li>Data Structures & Algorithms</li>
+                <li>Web Technology</li>
+                <li>Database Management Systems, SQL</li>
+                <li>Artificial Intelligence</li>
+            </ul>
+        </div>
+
+        <div class="section">
+            <h2>Soft Skills</h2>
+            <ul>
+                <li>Communication</li>
+                <li>Time Management</li>
+                <li>Teamwork</li>
+                <li>Problem Solving</li>
+                <li>Critical Thinking</li>
+            </ul>
+        </div>
+
+        <div class="section">
+            <h2>Hobbies</h2>
+            <ul>
+                <li>Badminton</li>
+                <li>Blogging</li>
+                <li>Reading Books</li>
+            </ul>
+        </div>
+    </div>
 </body>
 </html>
-
