--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <title>Maddirala Sreenija Swetha - Portfolio</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Arial', sans-serif;
             margin: 0;
             padding: 0;
-            background: linear-gradient(to right, #141e30, #243b55);
-            color: white;
+            background: #121212;
+            color: #ffffff;
             text-align: center;
         }
         .container {
@@ -18,15 +18,19 @@
             margin: auto;
             padding: 20px;
         }
-        h1 {
-            font-size: 2.5em;
-            margin-bottom: 10px;
+        .profile-photo {
+            width: 150px;
+            height: 150px;
+            border-radius: 50%;
+            border: 4px solid #ffffff;
+            margin-top: 20px;
         }
         .section {
-            background: rgba(255, 255, 255, 0.1);
+            background: #1e1e1e;
             padding: 20px;
             margin: 20px 0;
             border-radius: 10px;
+            box-shadow: 0 0 10px rgba(255, 255, 255, 0.1);
         }
         ul {
             list-style-type: none;
@@ -39,6 +43,7 @@
 </head>
 <body>
     <div class="container">
+        <img src="profile.jpg" alt="Maddirala Sreenija Swetha" class="profile-photo">
         <h1>Maddirala Sreenija Swetha</h1>
         <p>As a third-year CSE student, I have developed a strong foundation in C, Python, Java, and SQL, with proficiency in data structures. I am currently interning in the fields of Artificial Intelligence and Machine Learning, where I am applying my knowledge in real-world projects. To further enhance my coding skills, I actively engage in platforms like HackerRank, where I solve problems across various domains such as algorithms, data structures, and artificial intelligence. This helps me improve my problem-solving abilities, optimize my coding techniques, and stay updated with industry standards. Additionally, I am focused on gaining proficiency in full-stack development to expand my skill set and deepen my understanding of computer science.</p>
 
